--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,9 @@
 site_name: Ellipsis-TPM
 pages:
   - Home: index.md
+  - Install: install.md
+  - Switching from TPM: tpm.md
+  - Usage: usage.md
+  - Writing plugins: plugins.md
   - About: about.md
+theme: readthedocs
